--- a/css/main.css
+++ b/css/main.css
@@ -3,40 +3,41 @@ html {
 }
 
 body {
-  font-family: 'Montserrat', Helvetica, Arial, sans-serif;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 1em;
-}
-
-.container{
-	max-width: 1200px;
-	margin: 0 auto;
+	font-family: 'Montserrat', Helvetica, Arial, sans-serif;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	
-
+	font-size: 1em;
+	flex-wrap: wrap;
 }
 
-h1,
-h2,
-h3,
-h4 {
+.container {
+	max-width: 1200px;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+	width: 90%;
+}
+
+h1, h2, h3, h4 {
 	color: black;
 	text-transform: uppercase;
 	font-weight: 700;
 }
+
 h1 {
 	font-size: 1.8rem;
 }
+
 h2 {
-    font-size: 1.5rem;
+	font-size: 1.5rem;
 }
+
 h3 {
 	font-size: 1.2rem;
 }
+
 h4 {
 	font-size: 0.8rem;
 }
@@ -44,63 +45,64 @@ h4 {
 p {
 	font-size: 14px;
 	line-height: 21px;
-    padding: 0 30px;
+	padding: 0;
 }
 
 /*The widths are in a percentage!*/
+
 header {
-	height: 110px;
 	border-bottom: 3px solid #77a466;
 	margin: 0 auto;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-
+	width: 100%;
 }
 
 header h1 {
-	float: left;
 	margin: 0;
 	padding: 38px 0;
+	border-bottom: 3px solid #77a466;
+	text-align: center;
 }
+
 header h1 span {
 	color: #77a466;
 }
 
 header nav {
-	float: right;
 	padding: 46px 0;
+	text-align: center;
+	line-height: 50px;
 }
+
 header nav ul {
 	margin: 0;
 	padding: 0;
 }
+
 header nav ul li {
 	text-transform: uppercase;
 	font-weight: 700;
 	font-size: 14px;
 	padding: 0 10px;
-	display: inline;
+	display: flex;
+	flex-flow: column wrap;
 }
-header nav ul li a{
+
+header nav ul li a {
 	text-decoration: none;
-	color:#77a466;
+	color: #77a466;
 }
 
 /*The widths are in a percentage!*/
-.top-section,
-.bottom-section {
-	margin: 0 auto;
-	clear: both;
+
+.top-section, .bottom-section {
 	display: flex;
-	justify-content: center;
-	align-items: center;
+	flex-flow: column wrap;
 }
 
 .main-image {
 	height: auto;
-	float: left;
 }
+
 .main-image img {
 	width: 100%;
 	border-bottom: 3px solid #77a466;
@@ -110,23 +112,21 @@ header nav ul li a{
 	height: auto;
 	float: left;
 }
+
 .main-title h3 {
 	text-align: left;
 	padding: 5px 0;
 	color: #77a466;
 }
+
 .main-title p {
 	padding: 0;
 	font-size: 1rem;
 	line-height: 25px;
 }
 
-.section-one,
-.section-two,
-.section-three {
-	width: 33%;
+.section-one, .section-two, .section-three {
 	height: auto;
-	float: left;
 	border-top: 1px solid #eee;
 }
 
@@ -134,23 +134,18 @@ header nav ul li a{
 	padding: 10px 0;
 }
 
-.section-two {
-	border-left: 1px solid #eee;
-	border-right: 1px solid #eee;
-}
-
-.section-two h4,
-.section-three h4 {
-	padding: 10px 30px;
+.section-two h4, .section-three h4 {
+	padding: 10px 0px;
 }
 
 .menu {
 	list-style: none;
 	padding: 0;
 }
+
 .menu li {
 	padding: 10px 0;
-	color:#77a466;
+	color: #77a466;
 }
 
 .reviews {
@@ -165,16 +160,12 @@ header nav ul li a{
 }
 
 /*The widths are in a percentage!*/
+
 footer {
-	height: 50px;
 	border-top: 3px solid #eee;
 	margin: 0 auto;
-	clear: both;
-	text-align: center;
-	display: flex;
-	justify-content: center;
-	align-items: center;
 }
+
 footer span {
 	font-family: 'Galada', cursive;
 	text-transform: lowercase;
