--- a/css/main.css
+++ b/css/main.css
@@ -1,76 +1,67 @@
-html {
-	font-size: 16px;
+html{
+    font-size: 16px;
 }
 
 body {
-	font-family: 'Montserrat', Helvetica, Arial, sans-serif;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	font-size: 1em;
-	flex-wrap: wrap;
+    font-family: 'Montserrat', Helvetica, Arial, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1em;
 }
 
 .container {
 	max-width: 1200px;
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-	align-items: center;
-	width: 90%;
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
 }
 
-h1, h2, h3, h4 {
+h1,
+h2,
+h3,
+h4 {
 	color: black;
 	text-transform: uppercase;
 	font-weight: 700;
 }
 
-h1 {
-	font-size: 1.8rem;
-}
-
-h2 {
-	font-size: 1.5rem;
-}
-
-h3 {
-	font-size: 1.2rem;
-}
-
-h4 {
-	font-size: 0.8rem;
-}
-
 p {
-	font-size: 14px;
+	font-size: 0.875em;
 	line-height: 21px;
-	padding: 0;
+}
+
+ul {
+    margin: 0;
 }
 
 /*The widths are in a percentage!*/
-
 header {
 	border-bottom: 3px solid #77a466;
-	margin: 0 auto;
-	width: 100%;
+    text-align: center;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
 }
 
 header h1 {
+    font-size: 1.875em;
 	margin: 0;
-	padding: 38px 0;
-	border-bottom: 3px solid #77a466;
-	text-align: center;
+    padding: 38px 20px 20px 20px; 
+    border-bottom: 3px solid #77a466; 
+    width: 100%;
 }
-
 header h1 span {
 	color: #77a466;
 }
 
 header nav {
-	padding: 46px 0;
-	text-align: center;
-	line-height: 50px;
+    padding: 20px 0; 
+    width: 100%; 
 }
 
 header nav ul {
@@ -81,26 +72,23 @@ header nav ul {
 header nav ul li {
 	text-transform: uppercase;
 	font-weight: 700;
-	font-size: 14px;
-	padding: 0 10px;
-	display: flex;
-	flex-flow: column wrap;
+	font-size: .875em;
+    padding: 10px 0;
+    list-style: none;
 }
 
 header nav ul li a {
 	text-decoration: none;
-	color: #77a466;
+	color:#77a466;
 }
 
 /*The widths are in a percentage!*/
-
-.top-section, .bottom-section {
-	display: flex;
-	flex-flow: column wrap;
-}
-
-.main-image {
-	height: auto;
+.top-section,
+.bottom-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
 }
 
 .main-image img {
@@ -108,34 +96,24 @@ header nav ul li a {
 	border-bottom: 3px solid #77a466;
 }
 
-.main-title {
-	height: auto;
-	float: left;
-}
-
 .main-title h3 {
 	text-align: left;
 	padding: 5px 0;
-	color: #77a466;
+    color: #77a466;
+    font-size: 1.125em;
 }
 
 .main-title p {
 	padding: 0;
-	font-size: 1rem;
-	line-height: 25px;
+	font-size: 1em;
+	line-height: 1.5625;
 }
 
-.section-one, .section-two, .section-three {
-	height: auto;
-	border-top: 1px solid #eee;
-}
-
-.section-one h4 {
-	padding: 10px 0;
-}
-
-.section-two h4, .section-three h4 {
-	padding: 10px 0px;
+.section-one,
+.section-two,
+.section-three {
+    border-top: 1px solid #eee;
+    width: 100%;
 }
 
 .menu {
@@ -145,30 +123,77 @@ header nav ul li a {
 
 .menu li {
 	padding: 10px 0;
-	color: #77a466;
+	color:#77a466;
 }
 
 .reviews {
 	color: #333;
-	font-size: 1rem;
-	line-height: 21px;
+	font-size: 1em;
+	line-height: 1.3125;
 }
 
 .address {
-	font-size: 1rem;
-	line-height: 24px;
+	font-size: 1em;
+	line-height: 1.5;
 }
 
 /*The widths are in a percentage!*/
-
 footer {
 	border-top: 3px solid #eee;
-	margin: 0 auto;
+    text-align: center;
+    width: 100%; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
 }
 
 footer span {
 	font-family: 'Galada', cursive;
 	text-transform: lowercase;
 	color: #77a466;
-	font-size: 0.8rem;
+	font-size: .875em;
+}
+
+@media only screen and (min-width: 768px) {
+    .bottom-section{
+        justify-content: space-between;
+        align-items: flex-start;
+        border-top: 1px solid #eee;
+    }
+
+    .section-one,
+    .section-two,
+    .section-three {
+        border-top: none;
+        flex-basis: 30%;
+    }
+
+    .section-two {
+        border-left: 1px solid #eee;
+        border-right: 1px solid #eee;
+        padding: 0 20px;
+    }
+}
+
+@media only screen and (min-width: 1200px) {
+    header {
+        justify-content: space-between;
+    }
+
+    header h1 {
+        width: 30%;
+        padding: 0;
+        border-bottom: none;
+        text-align: left;
+    }
+
+    header nav {
+        width: 40%;
+    }
+
+    header nav ul {
+        display: flex;
+        justify-content: space-between;
+    }
 }
